compilerProject/src/antlr/dartParser.java
// Generated from C:/Users/EVO.STORE/IdeaProjects/tasneem/src/antlr\dartParser.g4 by ANTLR 4.10.1
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class dartParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, IMPORT_=2, TRY=3, CATCH=4, EQUALS=5, PLUS_EQUALS=6, MINUS_EQUALS=7, 
		TIMES_EQUALS=8, DIVIDE_EQUALS=9, MODULO_EQUALS=10, PLUS=11, MINUS=12, 
		TIMES=13, DIVIDE=14, MODULO=15, AND=16, OR=17, NOT=18, EQUAL_TO=19, NOT_EQUAL_TO=20, 
		GREATER_THAN=21, GREATER_THAN_OR_EQUAL_TO=22, LESS_THAN=23, LESS_THAN_OR_EQUAL_TO=24, 
		FINA=25, CBracketC=26, COMMA=27, Dot=28, TWODOT=29, CHILD=30, OSP=31, 
		CSP=32, OP=33, CP=34, SINGLE_QUOTE=35, SemiC=36, Name=37, OBracketC=38, 
		Newline=39, Whitespace=40, FINAL=41, CLass_Name_Constructor=42, Semicc=43, 
		LineBODY=44, SpaceBody=45, WIDGET=46, BUILDM=47, CONTAINAR=48, Row=49, 
		BUILDContext=50, Context=51, Return=52, Scaffold=53, COLUMN=54, GESTUREDETECTOR=55, 
		CARD=56, Text=57, OPenContext=58, CloseContext=59, COMMAWidget=60, SpaceBuild=61, 
		LineIntoBuild=62, OPENCYRBRWIDGETtree=63, SemiCIntoBuild=64, CSPChildrenRow=65, 
		OSPChildren=66, TWODOTCARD=67, ONTAP=68, CloseCYRBRWIDGETtree=69, CloseRow=70, 
		SemiCrow=71, CPCARD=72, CloseRowWidget=73, DecorationContainer=74, INT=75, 
		STRING=76, LIST=77, BOOLEAN=78, SpaceBodyDeclare=79, NAMEVARIABLE=80, 
		SemiDeclareVariable=81, Overridemethod=82, INHERITS_KEYWORD=83, CLASS_NAME=84, 
		Space=85, LineClass=86, OBC=87, CBC=88, THIS=89, OP_Constructor=90, DotData=91, 
		NAMEDATA=92, COMMAData=93, CloseConstructorss=94, SemiData=95, SpaceBodyCC=96, 
		OPCARD=97, CHILDCARD=98, SemiCcard=99, LineCard=100, OPScaffold=101, BodyScaffold=102, 
		TWODOTScaffold=103, CPScaffold=104, SemiCScaffold=105, LineScaffold=106, 
		OPGESTUREDETECTOR=107, CHILDGesture=108, TWODOTGestureDetector=109, CPGESTUREDETECTOR=110, 
		SemiCGESTUREDETECTOR=111, OPText=112, SingleQ=113, InputIntoText=114, 
		SpaceText=115, CPText=116, TWODOTTEXT=117, CHILDRENColumn=118, OPCOLUMN=119, 
		OSPChildrenColumn=120, TWODOTChildrenColumn=121, CPColumn=122, CSPChildrenColumn=123, 
		SemiCcolumn=124, LineColumn=125, SpaceContainer=126, OPContainer=127, 
		CHILDContainer=128, TWODOTCONTAINER=129, LineIntoContainer=130, CPContainer=131, 
		SemiCcontainer=132, OPENROW=133, CHILDRENRow=134, TWODOTChildren=135, 
		LineRow=136;
	public static final int
		RULE_plur = 0, RULE_class = 1, RULE_bodyClass = 2, RULE_body = 3, RULE_constructor = 4, 
		RULE_data = 5, RULE_declareVariable = 6, RULE_dataType = 7, RULE_widget = 8, 
		RULE_scaffold = 9, RULE_build = 10, RULE_return = 11, RULE_row = 12, RULE_column = 13, 
		RULE_text = 14, RULE_container = 15, RULE_gestureDetector = 16, RULE_card = 17, 
		RULE_onTap = 18, RULE_child = 19, RULE_widgets = 20, RULE_children = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"plur", "class", "bodyClass", "body", "constructor", "data", "declareVariable", 
			"dataType", "widget", "scaffold", "build", "return", "row", "column", 
			"text", "container", "gestureDetector", "card", "onTap", "child", "widgets", 
			"children"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'import'", "'try'", "'catch'", "'='", "'+='", "'-='", 
			"'*='", "'/='", "'%='", "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", 
			"'!'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", null, "'}'", null, 
			"'.'", null, null, "'['", "']'", "'('", "')'", "'''", "';'", null, "'{'", 
			null, null, null, null, null, null, null, "'Widget'", "'build'", "'Container'", 
			"'Row'", "'BuildContext'", "'context'", "'return'", "'Scaffold'", "'Column'", 
			"'GestureDetector'", "'Card'", "'Text'", null, null, null, null, null, 
			null, null, null, null, null, "'onTap'", null, null, null, null, null, 
			"'decoration'", "'int'", "'String'", "'List'", "'boolean'", null, null, 
			null, "'@override'", "'extends'", null, null, null, null, null, "'this'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'body'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "IMPORT_", "TRY", "CATCH", "EQUALS", "PLUS_EQUALS", "MINUS_EQUALS", 
			"TIMES_EQUALS", "DIVIDE_EQUALS", "MODULO_EQUALS", "PLUS", "MINUS", "TIMES", 
			"DIVIDE", "MODULO", "AND", "OR", "NOT", "EQUAL_TO", "NOT_EQUAL_TO", "GREATER_THAN", 
			"GREATER_THAN_OR_EQUAL_TO", "LESS_THAN", "LESS_THAN_OR_EQUAL_TO", "FINA", 
			"CBracketC", "COMMA", "Dot", "TWODOT", "CHILD", "OSP", "CSP", "OP", "CP", 
			"SINGLE_QUOTE", "SemiC", "Name", "OBracketC", "Newline", "Whitespace", 
			"FINAL", "CLass_Name_Constructor", "Semicc", "LineBODY", "SpaceBody", 
			"WIDGET", "BUILDM", "CONTAINAR", "Row", "BUILDContext", "Context", "Return", 
			"Scaffold", "COLUMN", "GESTUREDETECTOR", "CARD", "Text", "OPenContext", 
			"CloseContext", "COMMAWidget", "SpaceBuild", "LineIntoBuild", "OPENCYRBRWIDGETtree", 
			"SemiCIntoBuild", "CSPChildrenRow", "OSPChildren", "TWODOTCARD", "ONTAP", 
			"CloseCYRBRWIDGETtree", "CloseRow", "SemiCrow", "CPCARD", "CloseRowWidget", 
			"DecorationContainer", "INT", "STRING", "LIST", "BOOLEAN", "SpaceBodyDeclare", 
			"NAMEVARIABLE", "SemiDeclareVariable", "Overridemethod", "INHERITS_KEYWORD", 
			"CLASS_NAME", "Space", "LineClass", "OBC", "CBC", "THIS", "OP_Constructor", 
			"DotData", "NAMEDATA", "COMMAData", "CloseConstructorss", "SemiData", 
			"SpaceBodyCC", "OPCARD", "CHILDCARD", "SemiCcard", "LineCard", "OPScaffold", 
			"BodyScaffold", "TWODOTScaffold", "CPScaffold", "SemiCScaffold", "LineScaffold", 
			"OPGESTUREDETECTOR", "CHILDGesture", "TWODOTGestureDetector", "CPGESTUREDETECTOR", 
			"SemiCGESTUREDETECTOR", "OPText", "SingleQ", "InputIntoText", "SpaceText", 
			"CPText", "TWODOTTEXT", "CHILDRENColumn", "OPCOLUMN", "OSPChildrenColumn", 
			"TWODOTChildrenColumn", "CPColumn", "CSPChildrenColumn", "SemiCcolumn", 
			"LineColumn", "SpaceContainer", "OPContainer", "CHILDContainer", "TWODOTCONTAINER", 
			"LineIntoContainer", "CPContainer", "SemiCcontainer", "OPENROW", "CHILDRENRow", 
			"TWODOTChildren", "LineRow"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "dartParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public dartParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PlurContext extends ParserRuleContext {
		public ClassContext class_() {
			return getRuleContext(ClassContext.class,0);
		}
		public PlurContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plur; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterPlur(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitPlur(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitPlur(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlurContext plur() throws RecognitionException {
		PlurContext _localctx = new PlurContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_plur);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			class_();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(dartParser.CLASS, 0); }
		public List<TerminalNode> Space() { return getTokens(dartParser.Space); }
		public TerminalNode Space(int i) {
			return getToken(dartParser.Space, i);
		}
		public List<TerminalNode> CLASS_NAME() { return getTokens(dartParser.CLASS_NAME); }
		public TerminalNode CLASS_NAME(int i) {
			return getToken(dartParser.CLASS_NAME, i);
		}
		public TerminalNode INHERITS_KEYWORD() { return getToken(dartParser.INHERITS_KEYWORD, 0); }
		public TerminalNode OBC() { return getToken(dartParser.OBC, 0); }
		public TerminalNode LineBODY() { return getToken(dartParser.LineBODY, 0); }
		public BodyClassContext bodyClass() {
			return getRuleContext(BodyClassContext.class,0);
		}
		public ClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassContext class_() throws RecognitionException {
		ClassContext _localctx = new ClassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(CLASS);
			setState(47);
			match(Space);
			setState(48);
			match(CLASS_NAME);
			setState(49);
			match(Space);
			setState(50);
			match(INHERITS_KEYWORD);
			setState(51);
			match(Space);
			setState(52);
			match(CLASS_NAME);
			setState(53);
			match(Space);
			setState(54);
			match(OBC);
			setState(55);
			match(LineBODY);
			setState(56);
			bodyClass();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyClassContext extends ParserRuleContext {
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public BuildContext build() {
			return getRuleContext(BuildContext.class,0);
		}
		public List<DeclareVariableContext> declareVariable() {
			return getRuleContexts(DeclareVariableContext.class);
		}
		public DeclareVariableContext declareVariable(int i) {
			return getRuleContext(DeclareVariableContext.class,i);
		}
		public BodyClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterBodyClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitBodyClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitBodyClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyClassContext bodyClass() throws RecognitionException {
		BodyClassContext _localctx = new BodyClassContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bodyClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(58);
				declareVariable();
				}
				}
				setState(61); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==FINAL );
			setState(63);
			constructor();
			setState(64);
			build();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public WidgetsContext widgets() {
			return getRuleContext(WidgetsContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			widgets();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorContext extends ParserRuleContext {
		public TerminalNode CLass_Name_Constructor() { return getToken(dartParser.CLass_Name_Constructor, 0); }
		public TerminalNode OP_Constructor() { return getToken(dartParser.OP_Constructor, 0); }
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public TerminalNode CloseConstructorss() { return getToken(dartParser.CloseConstructorss, 0); }
		public TerminalNode Semicc() { return getToken(dartParser.Semicc, 0); }
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorContext constructor() throws RecognitionException {
		ConstructorContext _localctx = new ConstructorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constructor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(CLass_Name_Constructor);
			setState(69);
			match(OP_Constructor);
			setState(70);
			data();
			setState(71);
			match(CloseConstructorss);
			setState(72);
			match(Semicc);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public TerminalNode THIS() { return getToken(dartParser.THIS, 0); }
		public TerminalNode DotData() { return getToken(dartParser.DotData, 0); }
		public TerminalNode NAMEDATA() { return getToken(dartParser.NAMEDATA, 0); }
		public List<TerminalNode> COMMAData() { return getTokens(dartParser.COMMAData); }
		public TerminalNode COMMAData(int i) {
			return getToken(dartParser.COMMAData, i);
		}
		public List<DataContext> data() {
			return getRuleContexts(DataContext.class);
		}
		public DataContext data(int i) {
			return getRuleContext(DataContext.class,i);
		}
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitData(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_data);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(THIS);
			setState(75);
			match(DotData);
			setState(76);
			match(NAMEDATA);
			setState(81);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(77);
					match(COMMAData);
					setState(78);
					data();
					}
					} 
				}
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareVariableContext extends ParserRuleContext {
		public TerminalNode FINAL() { return getToken(dartParser.FINAL, 0); }
		public List<TerminalNode> SpaceBodyDeclare() { return getTokens(dartParser.SpaceBodyDeclare); }
		public TerminalNode SpaceBodyDeclare(int i) {
			return getToken(dartParser.SpaceBodyDeclare, i);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode NAMEVARIABLE() { return getToken(dartParser.NAMEVARIABLE, 0); }
		public TerminalNode SemiDeclareVariable() { return getToken(dartParser.SemiDeclareVariable, 0); }
		public TerminalNode LineBODY() { return getToken(dartParser.LineBODY, 0); }
		public DeclareVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterDeclareVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitDeclareVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitDeclareVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareVariableContext declareVariable() throws RecognitionException {
		DeclareVariableContext _localctx = new DeclareVariableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declareVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(FINAL);
			setState(85);
			match(SpaceBodyDeclare);
			setState(86);
			dataType();
			setState(87);
			match(SpaceBodyDeclare);
			setState(88);
			match(NAMEVARIABLE);
			setState(89);
			match(SemiDeclareVariable);
			setState(90);
			match(LineBODY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(dartParser.INT, 0); }
		public TerminalNode STRING() { return getToken(dartParser.STRING, 0); }
		public TerminalNode LIST() { return getToken(dartParser.LIST, 0); }
		public TerminalNode BOOLEAN() { return getToken(dartParser.BOOLEAN, 0); }
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitDataType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitDataType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dataType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_la = _input.LA(1);
			if ( !(((((_la - 75)) & ~0x3f) == 0 && ((1L << (_la - 75)) & ((1L << (INT - 75)) | (1L << (STRING - 75)) | (1L << (LIST - 75)) | (1L << (BOOLEAN - 75)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WidgetContext extends ParserRuleContext {
		public ContainerContext container() {
			return getRuleContext(ContainerContext.class,0);
		}
		public RowContext row() {
			return getRuleContext(RowContext.class,0);
		}
		public ColumnContext column() {
			return getRuleContext(ColumnContext.class,0);
		}
		public ScaffoldContext scaffold() {
			return getRuleContext(ScaffoldContext.class,0);
		}
		public GestureDetectorContext gestureDetector() {
			return getRuleContext(GestureDetectorContext.class,0);
		}
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public CardContext card() {
			return getRuleContext(CardContext.class,0);
		}
		public WidgetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_widget; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterWidget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitWidget(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitWidget(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WidgetContext widget() throws RecognitionException {
		WidgetContext _localctx = new WidgetContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_widget);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONTAINAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				container();
				}
				break;
			case Row:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				row();
				}
				break;
			case COLUMN:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				column();
				}
				break;
			case Scaffold:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				scaffold();
				}
				break;
			case GESTUREDETECTOR:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				gestureDetector();
				}
				break;
			case Text:
				enterOuterAlt(_localctx, 6);
				{
				setState(99);
				text();
				}
				break;
			case CARD:
				enterOuterAlt(_localctx, 7);
				{
				setState(100);
				card();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScaffoldContext extends ParserRuleContext {
		public TerminalNode Scaffold() { return getToken(dartParser.Scaffold, 0); }
		public TerminalNode OPScaffold() { return getToken(dartParser.OPScaffold, 0); }
		public TerminalNode LineScaffold() { return getToken(dartParser.LineScaffold, 0); }
		public TerminalNode BodyScaffold() { return getToken(dartParser.BodyScaffold, 0); }
		public TerminalNode TWODOTScaffold() { return getToken(dartParser.TWODOTScaffold, 0); }
		public WidgetContext widget() {
			return getRuleContext(WidgetContext.class,0);
		}
		public TerminalNode LineIntoBuild() { return getToken(dartParser.LineIntoBuild, 0); }
		public TerminalNode CloseContext() { return getToken(dartParser.CloseContext, 0); }
		public TerminalNode SemiCIntoBuild() { return getToken(dartParser.SemiCIntoBuild, 0); }
		public ScaffoldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scaffold; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterScaffold(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitScaffold(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitScaffold(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScaffoldContext scaffold() throws RecognitionException {
		ScaffoldContext _localctx = new ScaffoldContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_scaffold);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(Scaffold);
			setState(104);
			match(OPScaffold);
			setState(105);
			match(LineScaffold);
			setState(106);
			match(BodyScaffold);
			setState(107);
			match(TWODOTScaffold);
			setState(108);
			widget();
			setState(109);
			match(LineIntoBuild);
			setState(110);
			match(CloseContext);
			setState(111);
			match(SemiCIntoBuild);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
